bug fixin’ - no results search was doubling up due to overlay and styles, not great still but it doesn’t class - search overlay was clickable hidden so moving some z-index, shuffing some padding fixes this - overall improve the layout of the overlay

--- a/assets/sass/objects/_header.scss
+++ b/assets/sass/objects/_header.scss
@@ -1,7 +1,7 @@
 // Header
 // ---------------------------
 .header {
-  z-index: $z-index-200;
+  z-index: $z-index-100;
   top: 0;
   left: 0;
   right: 0;
